--- a/doc/main.tex
+++ b/doc/main.tex
@@ -30,7 +30,7 @@
 \end{abstract}
 
 
-\section{引言}
+\section{引言(飞)}
 引言小节主要负责写清楚以下问题：
 \begin{enumerate}
 \item 本文要解决什么问题
@@ -39,7 +39,7 @@
 \item 简单说一下本文解决问题的思路
 \end{enumerate}
 
-\section{相关工作}
+\section{相关工作（飞）}
 相关工作小节主要写和本文主题密切相关的技术/知识点，方便第三节的阐述。
 
 比如本文需要做一个图像识别算法，那本节可以介绍常见的图像识别算法；或者本文主要基于方法 A 进行改进，本节可以对方法 A 进行介绍。
@@ -50,6 +50,60 @@
 
 \section{论文的主要工作}
 本节的标题需要自拟。
+
+
+\subsection{Socket通信与数据包}
+\subsubsection{连接}
+\subsubsection{收发包}
+
+\subsection{场景物体}
+\subsubsection{资源管理}
+\subsubsection{创建}
+\subsubsection{销毁}
+\subsubsection{同步}
+\subsubsection{物理}
+
+
+\subsection{玩家角色}
+\subsubsection{移动}
+\subsubsection{蓄力}
+\subsubsection{大招}
+\subsubsection{动画}
+\subsubsection{队伍、球门和得分}
+
+
+\subsection{游戏效果}
+\subsubsection{玩家名字}
+\subsubsection{小地图}
+\subsubsection{后期处理}
+
+\subsection{实用代码}
+\subsubsection{单例爷爷}
+\subsubsection{线程管理}
+
+
+% \subsection{游戏逻辑}
+% \subsubsection{物体基类}
+% \subsubsection{资源管理}
+% \subsubsection{物体创建}
+% \subsubsection{玩家角色}
+% \subsubsection{特性}
+
+% \subsection{服务器}
+% \subsubsection{物理}
+% \subsubsection{控制玩家角色}
+% \subsubsection{大招}
+% \subsubsection{状态同步}
+
+% \subsection{客户端}
+% \subsubsection{相机追踪}
+% \subsubsection{玩家输入}
+% \subsubsection{后期特效}
+% \subsubsection{蓄力}
+
+
+
+
 
 本节需要详细介绍本文提出/设计的方法。
 
@@ -91,7 +145,7 @@ copy& More table copy$^{\mathrm{a}}$& &  \\
 正文中通过使用 cite 命令引用参考文献。
 
 
-\section{实验结果}
+\section{实验结果(飞)}
 本节题目可以自拟。
 
 主要负责成果展示。
@@ -99,6 +153,7 @@ copy& More table copy$^{\mathrm{a}}$& &  \\
 
 \section{结论}
 对整个工作做一个总结，得出结论，并展望未来。
+提升游戏性，性能优化（搞一个打开后就是6960的，没有图形界面的，没准服务器就能跑动了）
 
 
 \section*{References}
