--- a/doc/main.tex
+++ b/doc/main.tex
@@ -30,14 +30,16 @@
 \end{abstract}
 
 
-\section{引言(飞)}
-引言小节主要负责写清楚以下问题：
-\begin{enumerate}
-\item 本文要解决什么问题
-\item 这个问题为什么需要解决
-\item 其他人是如何解决这个问题的，有何不足
-\item 简单说一下本文解决问题的思路
-\end{enumerate}
+\section{引言}
+
+本项目旨在解决Unity多人在线对战游戏开发的问题，联机系统为C/S模式，使用Socket技术自主开发。该游戏是一个基于物理的足球游戏，打开游戏并设定好端口号后即开启了服务端，其他人则只需输入专用服务器的IP地址和端口号便可加入游戏，即使是中途加入当前场上的状态也会同步过来；每位连接到服务器的玩家都会在一定规则下被分配到队伍，将球踢入其他队伍球门会加分，踢入自己队伍球门会扣分；玩家在游戏中有着丰富多样的策略，可以通过身体来带球，可以用四个角上的能量棒去“踢”球，还可以通过旋转能量棒改变球的走向，甚至借助蓄力来发动必杀技，一转局势；因为完全基于物理，玩家的移动等操作皆是通过施加力来实现的，不同物体的物理材质也有差异，如运用得当，可完成多次反弹进门等高难度操作；小地图、碰撞效果、蓄力显示等将给予玩家非常直观的反馈。
+
+“独乐乐不如众乐乐”，多人游戏与单人游戏的快乐程度是在不同层次上的，不管是棋牌类的斗地主、麻将，还是竞技类的足球、篮球，亦或是流行的电子游戏《魔兽争霸》《英雄联盟》都为玩家们带来了单人时无法获得的快乐，许多人还会去观看其他人直播游玩多人游戏，从中获得欢愉。多人游戏也极大拓宽了一个游戏的丰富度，一个规则设置和维护得当的游戏，玩家可以游玩数年也不会感到厌倦。从开发的角度上，将一款游戏做成联机游戏的难度也与纯本地游戏是不可同日而语的，从建立连接、收发数据包到同步状态，还要考虑延迟、反作弊等各种复杂问题，Unity本身也没有内置合适的联网组件，这些对开发者来说都是一种考验。
+
+我们在开题之初便对常用的Unity联网游戏实现方式进行了调研。首先，Unity内置的Unity Networking（UNet）已经被官方宣布为过时，并将在近两年彻底停止维护，从Unity中移除\cite{UNet过时}；官方用于取代UNet的新联网组件——基于ECS架构的Unity NetCode，最新版本刚发布到 0.2.0，只是预览测试用的版本，无法正式投入实际开发；对于第三方的解决方案，Mirror算是基于UNet的改进版，但每个连接仅支持一个客户端；SmartFoxServer知名度低，国内外的文档都比较少；Photon为Client/Client的通信模式，并非我们需要的Client/Server模式\cite{优缺点比较}，ET框架是一个组件系统，和我们熟悉的面向对象差异较大。综合考虑各个因素，小组成员决定通过较为底层的Socket直接开发我们希望实现的网络联机系统，相关代码完全透明，参考微软提供的.NET文档，有着高度的自定义性，也不用担心因第三方封装带来的未知bug。
+
+我们从最基础的连接和收发包开始，先建立一个控制台的服务器和Unity中的客户端，接下来将服务器迁移到Unity中，随后再将二者合到一个项目中，共用场景。与此同时，本地也有一个测试场景，用来完成上线前的调试工作。网络部分，我们专注于场景中物体的创建、销毁、同步……玩家角色作为游戏中最重要的部分之一，从基础的移动逐渐丰富到能蓄力、能施展必杀技，有些效果的实现可能会对联网部分提出新的要求，此时便会一边开发网络部分，一边在本地开发效果部分。最后，还有一些用来增加游戏表现力的后期处理和辅助开发的实用代码。
+
 
 \section{相关工作（飞）}
 相关工作小节主要写和本文主题密切相关的技术/知识点，方便第三节的阐述。
@@ -67,7 +69,7 @@
 \subsection{玩家角色}
 \subsubsection{移动}
 \subsubsection{蓄力}
-\subsubsection{大招}
+\subsubsection{必杀技}
 \subsubsection{动画}
 \subsubsection{队伍、球门和得分}
 
@@ -76,6 +78,8 @@
 \subsubsection{玩家名字}
 \subsubsection{小地图}
 \subsubsection{后期处理}
+\subsubsection{shader（天）}
+
 
 \subsection{实用代码}
 \subsubsection{单例爷爷}
@@ -156,9 +160,9 @@ copy& More table copy$^{\mathrm{a}}$& &  \\
 提升游戏性，性能优化（搞一个打开后就是6960的，没有图形界面的，没准服务器就能跑动了）
 
 
-\section*{References}
+% \section*{References}
 
-\bibliography{IEEEexample}  
+\bibliography{myCite}  
 \bibliographystyle{IEEEtran}
 
 \end{document}
