--- a/doc/main.tex
+++ b/doc/main.tex
@@ -50,9 +50,7 @@
 
 一般从第二节开始，会出现子小节，请按照逻辑合理组织论文。
 
-\section{论文的主要工作}
-本节的标题需要自拟。
-
+\section{实践过程}
 
 \subsection{Socket通信与数据包}
 \subsubsection{连接}
@@ -144,7 +142,7 @@ copy& More table copy$^{\mathrm{a}}$& &  \\
 \end{figure}
 图~\ref{fig:figure1}是一个点。在表格和图中使用 label 可以指定标签，便于后续使用 ref 命令引用。
 
-参考文献\cite{IEEEexample:softonline,IEEEexample:tamethebeast,IEEEexample:standard}需要先将参考文献的信息写入一个 bib 文件，然后在最后一小节中使用 bibliography 命令指定 bib 文件\cite{IEEEexample:urlsty}，具体参见tex源文件。
+%参考文献\cite{IEEEexample:softonline,IEEEexample:tamethebeast,IEEEexample:standard}需要先将参考文献的信息写入一个 bib 文件，然后在最后一小节中使用 bibliography 命令指定 bib 文件\cite{IEEEexample:urlsty}，具体参见tex源文件。
 
 正文中通过使用 cite 命令引用参考文献。
 
