--- a/doc/myCite.bib
+++ b/doc/myCite.bib
@@ -17,3 +17,9 @@
   title         = "Unity NetCode",
   url           = "https://docs.unity3d.com/Packages/com.unity.netcode@0.2/manual/index.html",
 }
+
+@electronic{myCite:Tom,
+  author        = "Tom Weiland",
+  title         = "C# Networking Tutorials",
+  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA&list=PLXkn83W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
+}
