--- a/doc/myCite.bib
+++ b/doc/myCite.bib
@@ -4,7 +4,7 @@
 }
 
 @electronic{ET框架,
-  title         = "Unity3D Client And C# Server Framework",
+  title         = "Unity3D Client And C\# Server Framework",
   url           = "https://github.com/egametang/ET",
 }
 
@@ -32,7 +32,7 @@
 
 @electronic{myCite:Tom,
   author        = "Tom Weiland",
-  title         = "C# Networking Tutorials",
-  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA&list=PLXkn83W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
+  title         = "C\# Networking Tutorials",
+  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA\&list=PLXkn83W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
 }
 
