--- a/doc/myCite.bib
+++ b/doc/myCite.bib
@@ -32,7 +32,7 @@
 
 @electronic{myCite:Tom,
   author        = "Tom Weiland",
-  title         = "C# Networking Tutorials",
-  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA&list=PLXkn83W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
+  title         = "C\# Networking Tutorials",
+  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA\&list=PLXkn83W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
 }
 
