--- a/doc/myCite.bib
+++ b/doc/myCite.bib
@@ -30,6 +30,11 @@
   year          = "2016"
 }
 
+@electronic{描边shader,
+  title         = "Unity3d制作科幻描边",
+  url           = "https://www.bilibili.com/video/BV1o7411z7cN",
+}
+
 @electronic{myCite:Tom,
   author        = "Tom Weiland",
   title         = "C\# Networking Tutorials",
