--- a/doc/main.tex
+++ b/doc/main.tex
@@ -241,17 +241,17 @@ copy& More table copy$^{\mathrm{a}}$& &  \\
 \end{figure}
   根据图~\ref{fig:result1}，每个客户端在加入游戏中都会按照规则分配给相应的队伍。
 
-  \begin{figure}[htbp]
-    \centerline{\includegraphics[width=.32\textwidth]{images/result2.png}}
-    \caption{动作展示}
-    \label{fig:result2}
-  \end{figure}
+\begin{figure}[htbp]
+  \centerline{\includegraphics[width=.32\textwidth]{images/result2.png}}
+  \caption{动作展示}
+  \label{fig:result2}
+\end{figure}
   图~\ref{fig:result2}分别展示了：旋转能量棒、蓄力、蓄力完成、释放必杀技。
 
   在实际测试中，即使客户端和服务端的机器在两个间隔较远的房间，也可以通过校园网分配的IP地址正常进行游戏，甚至还可以借助游侠对战平台等软件构造出的虚拟局域网来进行互联网范围的联机游戏，延迟和帧数还有些差强人意，但对可玩性影响有限。
 
 \section{结论}
-对整个工作做一个总结，得出结论，并展望未来。
+在这次项目中，我们开发出了一个完整的可以进行多人在线对战的游戏，它的游戏部分不是仅为联网而做的demo，而是一个真正可玩、充满对抗性、元素丰富的竞技游戏，而它的联网部分在我们的测试中也表现出色，虽然目前尚未有房间系统，但完全可以通过开多个客户端并设定不同端口的方式来达到类似房间系统的效果。联网游戏的开发比单击游戏要复杂很多，许多原先可以轻松实现的效果在联网游戏中都要充分考虑如何创建、同步、销毁，服务端、客户端的代码如何解耦，怎样来减少运行时的开销，在克服重重困难后，小组成员从中汲取了许多经验，颇具收获。
 
 未来，我们可以进一步提升游戏性，加入三角、圆形、五角星等新的拥有不同大招的角色，引入场地道具等系统，甚至可以去做新的场地、多个球门、吃鸡模式；性能方面也有较大优化的空间，当前服务器必须以图形界面运行，如果将其改为纯控制台，或许就可以真正部署到运行 Linux系统的服务器上。
 
