--- a/doc/main.tex
+++ b/doc/main.tex
@@ -154,8 +154,12 @@ BaseStageObject中最重要的，便是物体的种类（category）和编号（
 
 至此，程序中创建、销毁各种场景物体的操作均可由统一的方法作入口执行，并能在服务端与客户端间同步。
 
-
 \subsection{玩家角色}
+\begin{figure}[htbp]
+  \centerline{\includegraphics[width=.15\textwidth]{images/player.png}}
+  \caption{玩家角色}
+  \label{fig:player}
+\end{figure}
 \subsubsection{移动}
 \quad
 
@@ -163,21 +167,45 @@ BaseStageObject中最重要的，便是物体的种类（category）和编号（
 
 在综合权衡游戏体验、场地大小、玩家操作等因素后，我们决定将主相机的显示范围设定在以玩家为中心的一块区域而不是整个场地，所以相机也必须跟随着玩家，将玩家置于整个画面的中心，而当玩家处于场地边缘等极端条件下，相机也会做适当的调整，不再移动。
 
-客户端只负责记录玩家的输入信息，即玩家都按下了哪些键，玩家的鼠标位置，而不会进行处理，这些数据都会在发往服务端后由服务端统一处理，很好的杜绝了玩家在本地修改内存而进行作弊的可能性。
-
+客户端的玩家角色额外拥有InputSender单例脚本，负责记录玩家的输入信息，即玩家都按下了哪些键，玩家的鼠标位置。客户端得到输入信息后不进行处理，而是将其发往服务端，传递至对应的玩家角色，由其特有的PlayerController脚本处理，很好的杜绝了玩家在本地修改内存而进行作弊的可能性。
 
 \subsubsection{能量棒}
-\subsubsection{蓄力}
-\subsubsection{必杀技}
-\subsubsection{动画}
-\subsubsection{队伍、球门和得分}
+\quad
 
+审视玩家角色，会发现它主要由几部分组成——几何体、能量棒、颜文字表情和玩家昵称。除去无实体的表情和昵称，实际上玩家只是一个在尖角嵌入了能量棒的几何体而已。
+
+能量棒如其名，在设定上是充满能量的棒状几何体，体现在游戏中，便是在触碰到物体时会尝试向其释放能量，即施加力。例如，能量棒撞到球会将球弹走；两个玩家的能量棒相撞会导致双方均被击退。在客户端，能量棒触碰物体时会有伸缩的动画效果作为反馈。
+
+为何要有能量棒这种设定？这源于项目规划阶段，感到单纯的几何体依靠碰撞踢球会比较枯燥，游戏要素、操作过于单一，且拥有不同形状几何体的角色似乎并不会受自身形状的影响而产生很大的区别（虽然目前的Demo因时间所限只完成了一种可用角色，但规划时认为最终游戏会有多种角色）。能量棒的出现一定程度上丰富了游戏性。区别于直接使用几何体撞球，目前的游戏中，几何体碰到球后并不会让球一下子弹出，而是能在一定程度上让球随之一同移动，形成带球的效果。想要让球快速射出，使用能量棒便成了较好的选择。让能量棒嵌在几何体的角上，不仅不会影响其大体形状，还使得不同几何体间区分度增加——根据几何体形状不同，尖角数量、分布会产生区别，进而影响能量棒的数量和分布。看似不同几何体角色拥有不同数量的能量棒会让游戏产生平衡性问题，实则可以尝试通过调整角色的其他属性（如速度、转身速度、能量棒力量、大招等）来进行平衡。
+
+能量棒位于几何体的斜角，想用它触球便要旋转角色，直观感觉不是很方便。因为分布在几何体四周的能量棒能粗略地勾勒出其轮廓，以此为灵感，又为能量棒加入了“旋转”机能。旋转能量棒过程中，每个能量棒逆时针移动至前一个能量棒所在位置，整体上所有能量棒可以大致扫过几何体的外围。这个看似没什么用的功能实际上赋予了玩家正面“踢球”的能力，通过旋转能量棒使其在几何体正前方附近碰到球并将之弹出，这样便可以在不旋转角色的同时完成射击。玩家可以点击鼠标左键来旋转能量棒。
+
+实际上，能量棒碰撞物体时施加力的逻辑只在服务端执行，而播放动画效果的逻辑只在客户端执行。这是通过在BallScripts.Servers和BallScripts.Clients引入不同的BarCollision脚本实现的，在能量棒初始化时会根据其所在端挂载相应的脚本。
+\subsubsection{必杀技、蓄力}
+\quad
+
+必杀技的加入让游戏显得更加刺激，为胜负引入新的悬念。既然是必杀技，那理应是一个不算太差的技能，且很可能效果并非瞬时，而是持续的。设定中，不同种类的角色将拥有不同必杀技，这意味着虽然释放必杀技的操作相同，但释放后执行的逻辑应该是可变的。为了实现可更换、有持续效果的必杀技，定义BaseUltimate抽象类，嵌入服务端的PlayerController中，在必杀技释放时，会调用类中的Update等方法（也可以依靠协程处理必杀技逻辑）。实际特定角色的必杀技，由BaseUltimate的子类实现。当前角色（正方形）的必杀技便是由UltimateCube实现的，会向四周释放逐渐变大的方形几何体。玩家可以点击鼠标中键来释放必杀技。
+
+必杀技如果能随时释放，想必会有损“必杀”之名，也会让赛场变得十分混乱。为此，引入蓄力机制来加以限制。玩家使用鼠标右键或空格键进行蓄力。通过PlayerCharge脚本控制，蓄力时客户端会出现粒子效果，能量棒会充当蓄力条，经由shader处理自底向上逐渐由白变黄，标示蓄力的进度。当蓄力值达到最大时，能量棒的黄色会被发光的金色取代，说明必杀技准备就绪，可以释放。在蓄力时，服务端也会限制玩家的最大速度在较低值，使得蓄力时无法快速移动。
+
+关于能量棒、蓄力、必杀技的示例，见后文图~\ref{fig:result2}。
+
+\subsubsection{队伍、球门、得分}
+\quad
+
+队伍、球门、得分，理论上属于游戏机制，却也同玩家有一定联系。
+
+队伍由Team类进行抽象，通过TeamManager管理。设定上，每个场景存在队伍数量上限，且持有若干队伍预设（包含队名、颜色等信息）。玩家连入服务端后，若队伍数尚未达到上限，便根据队伍预设加入新的队伍，否则就比较均匀地分配到老队伍中。玩家离开队伍时，若队伍人数降至0，则解散之。由于队伍是比较抽象的存在，并不像场景物体那样可以肉眼可见地被创建到场景中，故在网络同步方面与程序基于场景物体的同步不是很贴合。通过让玩家创建时所用的BuildInfo携带队伍信息，代表玩家属于某队（甚至队伍不存在时创建新队），来让队伍系统尽可能融入场景物体同步。玩家离开队伍时，缺少BuildInfo的辅助，则服务端需要额外通知客户端队伍成员的变更。
+
+球门属于场景物体中较为特殊的一类——它们默认置于场景中，而不是稍后才被创建出来。这是因为无法规定球门的标准样式，根据场地不同，球门的样子很可能发生变化。然而，为了让程序正常运行，依然规定了球门必须拥有能修改颜色的队伍标识以及进球的判定区域。设定中每个队伍至少拥有一个球门，且哪个队伍拥有哪些球门是随机的。虽然球门不用被创建到场景中，但它仍然拥有自己的Builder，主要负责根据BuildInfo做初始化，例如同指定队伍绑定。与队伍绑定后，队伍的颜色即是球门队伍标识的颜色。球门的进球判定在服务端通过GoalCollision脚本实现。当球进入球门的进球判定区域时，如果球门拥有队伍，则根据导致进球的玩家来决定得分——其他队玩家进球，为该队加分；己方玩家进乌龙球，为本队扣分（最低为0分）。
+
+至于队伍的得分，由于没有专门针对其的同步机制，故定义为队伍中所有玩家的得分和。每个玩家携带自身的得分信息，便可将得分同步纳入场景物体的同步机制。每次产生得分，同时更新进球玩家的得分和队伍的总得分，藉由服务器通知客户端，将各端间的队伍比分同步。
 
 \subsection{游戏效果}
 \subsubsection{玩家名字}
 \quad
 
-当前游戏中的UI并不多，而且也几乎没有需要用到统一管理的操作，所以我们没有编写全局的UI Manager，而是两个场景各有一个专门管理UI的脚本。在连接到服务器之前，玩家需要输入一个自己的用户名，这个名字会在后面的游戏场地上以TextMesh的形式作为玩家的子物体存在，跟随玩家。其中涉及到的变量名跨场景传递是由GameManager实现的。
+当前游戏中的UI并不多，而且也几乎没有需要用到统一管理的操作，所以我们没有编写全局的UI Manager，而是两个场景各有一个专门管理UI的脚本。在连接到服务器之前，玩家需要输入一个自己的昵称，这个名字会在后面的游戏场地上以TextMesh的形式作为玩家的子物体存在，跟随玩家。其中涉及到的变量名跨场景传递是由GameManager实现的。
 
 \subsubsection{小地图}
 \quad
@@ -193,7 +221,7 @@ BaseStageObject中最重要的，便是物体的种类（category）和编号（
 \subsubsection{后期处理}
 \quad
 
-我们用Unity的PostProcessing插件为游戏添加了丰富的后期处理效果，其中有增强画面美观度的暗角，增强画面表现力的辉光，增加画面真实感的动态模糊和增加用户反馈的色彩分离。色彩分离效果的强度是由代码控制的，这样我们会在能量棒发生碰撞时调用相关函数，一旦碰撞，整个画面都会出现色彩分离。
+我们用Unity的PostProcessing插件为游戏添加了丰富的后期处理效果，其中有增强画面美观度的暗角，增强画面表现力的辉光，增加画面真实感的动态模糊和增加用户反馈的色彩分离。色彩分离效果的强度是由代码控制的，这样我们会在能量棒发生碰撞时调用相关方法，一旦碰撞，整个画面都会出现色彩分离。
 
 \begin{figure}[htbp]
   \centerline{\includegraphics[width=.38\textwidth]{images/pp.png}}
@@ -201,36 +229,10 @@ BaseStageObject中最重要的，便是物体的种类（category）和编号（
   \label{fig:pp}
 \end{figure}
 
-\subsubsection{shader（天）}
-
-
 \subsection{实用代码}
-\subsubsection{单例爷爷}
+\subsubsection{单例基类}
 \subsubsection{线程管理}
-
-
-% \subsection{游戏逻辑}
-% \subsubsection{物体基类}
-% \subsubsection{资源管理}
-% \subsubsection{物体创建}
-% \subsubsection{玩家角色}
-% \subsubsection{特性}
-
-% \subsection{服务器}
-% \subsubsection{物理}
-% \subsubsection{控制玩家角色}
-% \subsubsection{大招}
-% \subsubsection{状态同步}
-
-% \subsection{客户端}
-% \subsubsection{相机追踪}
-% \subsubsection{玩家输入}
-% \subsubsection{后期特效}
-% \subsubsection{蓄力}
-
-
-
-
+\subsubsection{网络标识特性}
 
 本节需要详细介绍本文提出/设计的方法。
 
@@ -293,7 +295,7 @@ copy& More table copy$^{\mathrm{a}}$& &  \\
 \section{结论}
 在这次项目中，我们开发出了一个完整的可以进行多人在线对战的游戏，它的游戏部分不是仅为联网而做的demo，而是一个真正可玩、充满对抗性、元素丰富的竞技游戏，而它的联网部分在我们的测试中也表现出色，虽然目前尚未有房间系统，但完全可以通过开多个客户端并设定不同端口的方式来达到类似房间系统的效果。联网游戏的开发比单击游戏要复杂很多，许多原先可以轻松实现的效果在联网游戏中都要充分考虑如何创建、同步、销毁，服务端、客户端的代码如何解耦，怎样来减少运行时的开销，在克服重重困难后，小组成员从中汲取了许多经验，颇具收获。
 
-未来，我们可以进一步提升游戏性，加入三角、圆形、五角星等新的拥有不同大招的角色，引入场地道具等系统，甚至可以去做新的场地、多个球门、吃鸡模式；性能方面也有较大优化的空间，当前服务器必须以图形界面运行，如果将其改为纯控制台，或许就可以真正部署到运行 Linux系统的服务器上。
+未来，我们可以进一步提升游戏性，加入三角、圆形、五角星等新的拥有不同大招的角色，引入场地道具等系统，甚至可以去做新的场地、多个球门、吃鸡模式；性能方面也有较大优化的空间，当前服务器必须以图形界面运行，如果将其改为纯控制台，或许就可以真正部署到运行 Linux系统的服务器上；至于游戏效果，可以为游戏添加背景音乐及音效，使角色的表情和动画更加生动，丰富UI，乃至让游戏画面看起来更精美。
 
 % \section*{References}
 
