--- a/doc/myCite.bib
+++ b/doc/myCite.bib
@@ -46,3 +46,8 @@
   title         = "达哥直播：Addressable Asset System全新资源管理流程",
   url           = "https://www.bilibili.com/video/BV1N4411q7NA",
 }
+
+@electronic{myCite:singleton,
+  title         = "Singleton",
+  url           = "http://wiki.unity3d.com/index.php/Singleton",
+}
