--- a/doc/myCite.bib
+++ b/doc/myCite.bib
@@ -38,7 +38,7 @@
 @electronic{myCite:Tom,
   author        = "Tom Weiland",
   title         = "C\# Networking Tutorials",
-  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA\&list=PLXkn83W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
+  url           = "https://www.youtube.com/watch?v=uh8XaC0Y5MA\&list=PLXkn83\\W0QkfnqsK8I0RAz5AbUxfg3bOQ5",
 }
 
 @electronic{myCite:Dage,
